@@ -249,7 +249,7 @@ td, th {
   font-family: sans-serif;
 }
 
-.pure-u-1, .widget_categories .postform, .comment-form, .pure-u-1-1, .pure-u-1-2, .pure-u-1-3, .pure-u-2-3, .pure-u-1-4, .pure-u-3-4, .pure-u-1-5, .pure-u-2-5, .pure-u-3-5, .pure-u-4-5, .pure-u-5-5, .pure-u-1-6, .pure-u-5-6, .pure-u-1-8, .pure-u-3-8, .pure-u-5-8, .pure-u-7-8, .pure-u-1-12, .pure-u-5-12, .pure-u-7-12, .pure-u-11-12, .pure-u-1-24, .pure-u-2-24, .pure-u-3-24, .pure-u-4-24, .pure-u-5-24, .pure-u-6-24, .pure-u-7-24, .pure-u-8-24, .pure-u-9-24, .pure-u-10-24, .pure-u-11-24, .pure-u-12-24, .pure-u-13-24, .pure-u-14-24, .pure-u-15-24, .pure-u-16-24, .pure-u-17-24, .pure-u-18-24, .pure-u-19-24, .pure-u-20-24, .pure-u-21-24, .pure-u-22-24, .pure-u-23-24, .pure-u-24-24 {
+.pure-u-1, .gallery-columns-1 .gallery-item, .gallery-columns-2 .gallery-item, .gallery-columns-3 .gallery-item, .gallery-columns-4 .gallery-item, .gallery-columns-5 .gallery-item, .widget_categories .postform, .comment-form, .pure-u-1-1, .pure-u-1-2, .pure-u-1-3, .pure-u-2-3, .pure-u-1-4, .pure-u-3-4, .pure-u-1-5, .pure-u-2-5, .pure-u-3-5, .pure-u-4-5, .pure-u-5-5, .pure-u-1-6, .pure-u-5-6, .pure-u-1-8, .pure-u-3-8, .pure-u-5-8, .pure-u-7-8, .pure-u-1-12, .pure-u-5-12, .pure-u-7-12, .pure-u-11-12, .pure-u-1-24, .pure-u-2-24, .pure-u-3-24, .pure-u-4-24, .pure-u-5-24, .pure-u-6-24, .pure-u-7-24, .pure-u-8-24, .pure-u-9-24, .pure-u-10-24, .pure-u-11-24, .pure-u-12-24, .pure-u-13-24, .pure-u-14-24, .pure-u-15-24, .pure-u-16-24, .pure-u-17-24, .pure-u-18-24, .pure-u-19-24, .pure-u-20-24, .pure-u-21-24, .pure-u-22-24, .pure-u-23-24, .pure-u-24-24 {
   display: inline-block;
   *display: inline;
   zoom: 1;
@@ -394,7 +394,7 @@ td, th {
   *width: 95.8023%;
 }
 
-.pure-u-1, .widget_categories .postform, .comment-form, .pure-u-1-1, .pure-u-5-5, .pure-u-24-24 {
+.pure-u-1, .gallery-columns-1 .gallery-item, .gallery-columns-2 .gallery-item, .gallery-columns-3 .gallery-item, .gallery-columns-4 .gallery-item, .gallery-columns-5 .gallery-item, .widget_categories .postform, .comment-form, .pure-u-1-1, .pure-u-5-5, .pure-u-24-24 {
   width: 100%;
 }
 
@@ -1104,7 +1104,7 @@ https://github.com/yahoo/pure/blob/master/LICENSE.md
   }
 }
 @media screen and (min-width: 48em) {
-  .pure-u-md-1, .pure-u-md-1-1, .pure-u-md-1-2, .comment-form, .pure-u-md-1-3, .pure-u-md-2-3, .pure-u-md-1-4, .pure-u-md-3-4, .pure-u-md-1-5, .pure-u-md-2-5, .pure-u-md-3-5, .pure-u-md-4-5, .pure-u-md-5-5, .pure-u-md-1-6, .pure-u-md-5-6, .pure-u-md-1-8, .pure-u-md-3-8, .pure-u-md-5-8, .pure-u-md-7-8, .pure-u-md-1-12, .pure-u-md-5-12, .pure-u-md-7-12, .pure-u-md-11-12, .pure-u-md-1-24, .pure-u-md-2-24, .pure-u-md-3-24, .pure-u-md-4-24, .pure-u-md-5-24, .pure-u-md-6-24, .pure-u-md-7-24, .pure-u-md-8-24, .pure-u-md-9-24, .pure-u-md-10-24, .pure-u-md-11-24, .pure-u-md-12-24, .pure-u-md-13-24, .pure-u-md-14-24, .pure-u-md-15-24, .pure-u-md-16-24, .pure-u-md-17-24, .pure-u-md-18-24, .pure-u-md-19-24, .pure-u-md-20-24, .pure-u-md-21-24, .pure-u-md-22-24, .pure-u-md-23-24, .pure-u-md-24-24 {
+  .pure-u-md-1, .pure-u-md-1-1, .pure-u-md-1-2, .gallery-columns-2 .gallery-item, .comment-form, .pure-u-md-1-3, .gallery-columns-3 .gallery-item, .pure-u-md-2-3, .pure-u-md-1-4, .gallery-columns-4 .gallery-item, .pure-u-md-3-4, .pure-u-md-1-5, .gallery-columns-5 .gallery-item, .pure-u-md-2-5, .pure-u-md-3-5, .pure-u-md-4-5, .pure-u-md-5-5, .pure-u-md-1-6, .pure-u-md-5-6, .pure-u-md-1-8, .pure-u-md-3-8, .pure-u-md-5-8, .pure-u-md-7-8, .pure-u-md-1-12, .pure-u-md-5-12, .pure-u-md-7-12, .pure-u-md-11-12, .pure-u-md-1-24, .pure-u-md-2-24, .pure-u-md-3-24, .pure-u-md-4-24, .pure-u-md-5-24, .pure-u-md-6-24, .pure-u-md-7-24, .pure-u-md-8-24, .pure-u-md-9-24, .pure-u-md-10-24, .pure-u-md-11-24, .pure-u-md-12-24, .pure-u-md-13-24, .pure-u-md-14-24, .pure-u-md-15-24, .pure-u-md-16-24, .pure-u-md-17-24, .pure-u-md-18-24, .pure-u-md-19-24, .pure-u-md-20-24, .pure-u-md-21-24, .pure-u-md-22-24, .pure-u-md-23-24, .pure-u-md-24-24 {
     display: inline-block;
     *display: inline;
     zoom: 1;
@@ -1134,7 +1134,7 @@ https://github.com/yahoo/pure/blob/master/LICENSE.md
     *width: 16.6357%;
   }
 
-  .pure-u-md-1-5 {
+  .pure-u-md-1-5, .gallery-columns-5 .gallery-item {
     width: 20%;
     *width: 19.969%;
   }
@@ -1144,7 +1144,7 @@ https://github.com/yahoo/pure/blob/master/LICENSE.md
     *width: 20.8023%;
   }
 
-  .pure-u-md-1-4, .pure-u-md-6-24 {
+  .pure-u-md-1-4, .gallery-columns-4 .gallery-item, .pure-u-md-6-24 {
     width: 25%;
     *width: 24.969%;
   }
@@ -1154,7 +1154,7 @@ https://github.com/yahoo/pure/blob/master/LICENSE.md
     *width: 29.1357%;
   }
 
-  .pure-u-md-1-3, .pure-u-md-8-24 {
+  .pure-u-md-1-3, .gallery-columns-3 .gallery-item, .pure-u-md-8-24 {
     width: 33.3333%;
     *width: 33.3023%;
   }
@@ -1179,7 +1179,7 @@ https://github.com/yahoo/pure/blob/master/LICENSE.md
     *width: 45.8023%;
   }
 
-  .pure-u-md-1-2, .comment-form, .pure-u-md-12-24 {
+  .pure-u-md-1-2, .gallery-columns-2 .gallery-item, .comment-form, .pure-u-md-12-24 {
     width: 50%;
     *width: 49.969%;
   }
@@ -1604,7 +1604,7 @@ h3 {
 }
 
 /* LAYOUT CSS */
-.pure-img-responsive, .featured-post img {
+.pure-img-responsive, .gallery .gallery-item img, .featured-post img {
   max-width: 100%;
   height: auto;
 }
@@ -1781,7 +1781,7 @@ body {
   margin-top: 199px;
 }
 
-.clearfix {
+.clearfix, .gallery {
   clear: both;
 }
 
@@ -2033,7 +2033,7 @@ a img.aligncenter {
   margin-right: auto;
 }
 
-.wp-caption {
+.wp-caption, .gallery .gallery-item {
   background: #FFF;
   border: 1px solid #ddd;
   max-width: 100%;
@@ -2041,19 +2041,19 @@ a img.aligncenter {
   text-align: center;
 }
 
-.wp-caption.alignnone {
+.wp-caption.alignnone, .gallery .alignnone.gallery-item {
   margin: 5px 20px 20px 0;
 }
 
-.wp-caption.alignleft {
+.wp-caption.alignleft, .gallery .alignleft.gallery-item {
   margin: 5px 20px 20px 0;
 }
 
-.wp-caption.alignright {
+.wp-caption.alignright, .gallery .alignright.gallery-item {
   margin: 5px 0 20px 20px;
 }
 
-.wp-caption img {
+.wp-caption img, .gallery .gallery-item img {
   border: 0 none;
   height: auto;
   margin: 0;
@@ -2062,7 +2062,7 @@ a img.aligncenter {
   width: auto;
 }
 
-.wp-caption .wp-caption-text,
+.wp-caption .wp-caption-text, .gallery .gallery-item .wp-caption-text,
 .gallery-caption {
   font-size: 14px;
   line-height: 17px;
@@ -2070,6 +2070,30 @@ a img.aligncenter {
   padding: 4px 4px 0 4px;
   border-radius: 4px;
   font-style: italic;
+}
+
+.gallery {
+  clear: both;
+  display: table;
+}
+.gallery .gallery-item {
+  float: left;
+}
+
+.gallery-columns-2 .gallery-item {
+  margin: 0;
+}
+
+.gallery-columns-3 .gallery-item {
+  margin: 0;
+}
+
+.gallery-columns-4 .gallery-item {
+  margin: 0;
+}
+
+.gallery-columns-5 .gallery-item {
+  margin: 0;
 }
 
 .sticky {
