@@ -556,6 +556,50 @@ a img.aligncenter {
 	border-radius: 4px;
 	font-style: italic;
 }
+.gallery {
+	clear: both;
+	display: table;
+	@extend .clearfix;
+	.gallery-item {
+		@extend .wp-caption;
+		float: left;
+		img {
+			@extend .pure-img-responsive;
+		}
+	}	
+}
+
+.gallery-columns-1 {
+	.gallery-item {
+		@extend .pure-u-1;
+	}
+}
+.gallery-columns-2 {
+	.gallery-item {
+		margin: 0;
+		@extend .pure-u-1, .pure-u-md-1-2;
+	}
+}
+.gallery-columns-3 {
+	.gallery-item {
+		margin: 0;
+		@extend .pure-u-1, .pure-u-md-1-3;
+	}
+}
+.gallery-columns-4 {
+	.gallery-item {
+		margin: 0;
+		@extend .pure-u-1, .pure-u-md-1-4;
+	}
+}
+.gallery-columns-5 {
+	.gallery-item {
+		margin: 0;
+		@extend .pure-u-1, .pure-u-md-1-5;
+	}
+}
+
+
 .sticky {
 	color: inherit;
 }
