@@ -8,6 +8,7 @@
 2. added word-wrap for posts
 3. added support for post with titles displaying permalinks in post Date
 4. Fixing title returning twice.
+5. added CSS for Gallery
 
 /**
  * 26/11/2015 - version 1.1.4
